# serializer version: 1
# name: test_find[None]
  dict({
    'documents': list([
      dict({
        'active': True,
        'administrator_role': 'full',
        'force_reset': False,
        'groups': list([
          dict({
            'id': 1,
            'legacy_id': None,
            'name': 'musicians',
          }),
        ]),
        'handle': 'leeashley',
        'id': 1,
        'last_password_change': 'approximately_now_isoformat',
        'permissions': dict({
          'cancel_job': False,
          'create_ref': False,
          'create_sample': True,
          'modify_hmm': False,
          'modify_subtraction': False,
          'remove_file': False,
          'remove_job': False,
          'upload_file': False,
        }),
        'primary_group': None,
      }),
      dict({
        'active': True,
        'administrator_role': None,
        'force_reset': False,
        'groups': list([
        ]),
        'handle': 'modonnell',
        'id': 3,
        'last_password_change': 'approximately_now_isoformat',
        'permissions': dict({
          'cancel_job': False,
          'create_ref': False,
          'create_sample': False,
          'modify_hmm': False,
          'modify_subtraction': False,
          'remove_file': False,
          'remove_job': False,
          'upload_file': False,
        }),
        'primary_group': None,
      }),
      dict({
        'active': True,
        'administrator_role': None,
        'force_reset': False,
        'groups': list([
        ]),
        'handle': 'myersmitchell',
        'id': 2,
        'last_password_change': 'approximately_now_isoformat',
        'permissions': dict({
          'cancel_job': False,
          'create_ref': False,
          'create_sample': False,
          'modify_hmm': False,
          'modify_subtraction': False,
          'remove_file': False,
          'remove_job': False,
          'upload_file': False,
        }),
        'primary_group': None,
      }),
    ]),
    'found_count': 3,
    'page': 1,
    'page_count': 1,
    'per_page': 25,
    'total_count': 3,
  })
# ---
# name: test_find[fred]
  dict({
    'documents': list([
      dict({
        'active': True,
        'administrator_role': None,
        'force_reset': False,
        'groups': list([
        ]),
        'handle': 'fred',
        'id': 2,
        'last_password_change': 'approximately_now_isoformat',
        'permissions': dict({
          'cancel_job': False,
          'create_ref': False,
          'create_sample': False,
          'modify_hmm': False,
          'modify_subtraction': False,
          'remove_file': False,
          'remove_job': False,
          'upload_file': False,
        }),
        'primary_group': None,
      }),
    ]),
    'found_count': 1,
    'page': 1,
    'page_count': 1,
    'per_page': 25,
    'total_count': 3,
  })
# ---
